--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </table>
         </center>
  
-        
+        <img src="https://drive.google.com/file/d/1NLm7NYTd72N-ZYaump-30WkUWkTIvFrU/view?usp=drive_link" alt="">
     
     <center>
         <h1>IPL Team</h1>
